# dockerpal

./: README.md  build  requirements.txt  setup.cfg
src/dockerpal/: __init__.py  __main__.py  app.py  cli.py  example.py  fsm.py  questions01.tcss
src/dockerpal/screens/: fsm.py
