
[metadata]
version = 0.0.1
name = dockerpal
author = yell0w4x
author_email = yell0w4x@gmail.com
description = Docker images cleaner and inspector tui app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yell0w4x/dockerpal
project_urls =
    Bug Tracker = https://github.com/yell0w4x/dockerpal/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = MIT
keywords = docker images cleaner inspector tui


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires = 

[options.packages.find]
where = src


[options.entry_points]
console_scripts = 
    dockerpal = dockerpal.cli:main
