
[metadata]
version = 0.0.25
name = dockerpal
author = yell0w4x
author_email = yell0w4x@gmail.com
description = Docker images cleaner and inspector tui app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yell0w4x/dockerpal
project_urls =
    Bug Tracker = https://github.com/yell0w4x/dockerpal/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = MIT
keywords = docker images cleaner inspector tui


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires = 
    certifi==2025.11.12
    charset-normalizer==3.4.4
    docker==7.1.0
    idna==3.11
    linkify-it-py==2.0.3
    markdown-it-py==4.0.0
    mdit-py-plugins==0.5.0
    mdurl==0.1.2
    platformdirs==4.5.1
    Pygments==2.19.2
    requests==2.32.5
    rich==14.2.0
    textual==6.12.0
    tree-sitter==0.25.2
    tree-sitter-bash==0.25.1
    tree-sitter-css==0.25.0
    tree-sitter-go==0.25.0
    tree-sitter-html==0.23.2
    tree-sitter-java==0.23.5
    tree-sitter-javascript==0.25.0
    tree-sitter-json==0.24.8
    tree-sitter-markdown==0.5.1
    tree-sitter-python==0.25.0
    tree-sitter-regex==0.25.0
    tree-sitter-rust==0.24.0
    tree-sitter-sql==0.3.11
    tree-sitter-toml==0.7.0
    tree-sitter-xml==0.7.0
    tree-sitter-yaml==0.7.2
    typing_extensions==4.15.0
    uc-micro-py==1.0.3
    urllib3==2.6.2

[options.packages.find]
where = src


[options.entry_points]
console_scripts = 
    dockerpal = dockerpal.cli:main
